Removed top margin from aside.scheme-meta because it was interfering with correct spacing. Added styling to updates tab; Images, Edit, Reply and Delete are missing, so styling for that is TBD. Consolidated scheme collection styling for Scheme Detail and Issues Detail because they are the same; Issue Detail related schemes should be limited to 3, like on Scheme Detail?

--- a/sites/all/themes/asb/sass/_layout.scss
+++ b/sites/all/themes/asb/sass/_layout.scss
@@ -93,7 +93,7 @@ $zen-auto-include-item-base: false;
 
 aside.scheme-meta {
   @include breakpoint( md ){
-    margin-top: 1em;
+    // margin-top: 1em;
     @include clearfix;
   }
 }
